; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_utils.c_variance_array.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_utils.c_variance_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @variance_array(float* %0, i32 %1) #0 {
  %3 = alloca float*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  store float* %0, float** %3, align 8
  store i32 %1, i32* %4, align 4
  store float 0.000000e+00, float* %6, align 4
  %9 = load float*, float** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call float @mean_array(float* %9, i32 %10)
  store float %11, float* %7, align 4
  store i32 0, i32* %5, align 4
  br label %12

12:                                               ; preds = %34, %2
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %37

16:                                               ; preds = %12
  %17 = load float*, float** %3, align 8
  %18 = load i32, i32* %5, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds float, float* %17, i64 %19
  %21 = load float, float* %20, align 4
  %22 = load float, float* %7, align 4
  %23 = fsub float %21, %22
  %24 = load float*, float** %3, align 8
  %25 = load i32, i32* %5, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds float, float* %24, i64 %26
  %28 = load float, float* %27, align 4
  %29 = load float, float* %7, align 4
  %30 = fsub float %28, %29
  %31 = fmul float %23, %30
  %32 = load float, float* %6, align 4
  %33 = fadd float %32, %31
  store float %33, float* %6, align 4
  br label %34

34:                                               ; preds = %16
  %35 = load i32, i32* %5, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %5, align 4
  br label %12

37:                                               ; preds = %12
  %38 = load float, float* %6, align 4
  %39 = load i32, i32* %4, align 4
  %40 = sitofp i32 %39 to float
  %41 = fdiv float %38, %40
  store float %41, float* %8, align 4
  %42 = load float, float* %8, align 4
  ret float %42
}

declare dso_local float @mean_array(float*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
